--- a/.github/workflows/all-actions.yml
+++ b/.github/workflows/all-actions.yml
@@ -18,6 +18,10 @@ jobs:
         with:
           username: jimbrig
           github_token: ${{ secrets.GITHUB_TOKEN }}
+      - name: Pull any upstream changes
+        uses: actions-js/pull@master
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
       - name: Commit & Push changes
         uses: actions-js/push@master
         with:
