--- a/.github/workflows/all-actions.yml
+++ b/.github/workflows/all-actions.yml
@@ -64,10 +64,10 @@ jobs:
             PREMIUM: true
             
   update-readme:
-    needs: 
-      - todoist
-      - profile_stack
-      - github-metrics
+#    needs: 
+#      - todoist
+#      - profile_stack
+#      - github-metrics
     name: Update README
     runs-on: ubuntu-latest
     steps:
