--- a/.github/workflows/all-actions.yml
+++ b/.github/workflows/all-actions.yml
@@ -3,57 +3,26 @@ on:
   schedule:
     # Runs every 2 hours
     - cron: "0 */2 * * *"
-
+    
 jobs:
-  # visit https://github.com/lowlighter/metrics/blob/master/action.yml for full reference
-  github-metrics:
+
+  Profile-GitHub-Metrics:
+    name: Create GitHub Metrics
     runs-on: ubuntu-latest
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          # Your GitHub token
-          token: ${{ secrets.METRICS_TOKEN }}
-          # Options
-          user: jimbrig
-          template: classic
-          base: header, activity, community, repositories, metadata
-          config_timezone: America/New_York
-          plugin_achievements: yes
-          plugin_achievements_limit: 20
-          plugin_achievements_secrets: yes
-          plugin_achievements_threshold: B
-          plugin_activity: yes
-          plugin_activity_days: 365
-          plugin_activity_filter: all
-          plugin_activity_limit: 10
-          plugin_activity_visibility: all
-          plugin_followup: yes
-          plugin_gists: yes
-          plugin_introduction: yes
-          plugin_introduction_title: yes
-          plugin_isocalendar: yes
-          plugin_isocalendar_duration: full-year
-          plugin_languages: yes
-          plugin_languages_colors: github
-          plugin_languages_ignored: html
-          plugin_languages_threshold: 0%
-          plugin_lines: yes
-          plugin_projects: no
-          plugin_projects_descriptions: no
-          plugin_projects_limit: 10
-          plugin_stars: yes
-          plugin_stars_limit: 20
-          repositories_forks: yes
+          token: ${{ secrets.METRICS_TOKEN }}  
           
-  profile_stack:
+  Profile-Stack:
       runs-on: ubuntu-latest
       steps:
         - uses: actions/checkout@v2
         - uses: Matt-Gleich/profile_stack@master
           with:
-            path: ./stack.yml
+            path: ./config/stack.yml
             
-  update-readme:
+  Profile-README:
     name: Update README
     runs-on: ubuntu-latest
     steps:
@@ -71,12 +40,8 @@ jobs:
         with:
           github_token: ${{ secrets.GITHUB_TOKEN }}
           
-  todoist:
-    needs: 
-      - update-readme
-      - profile_stack
-      - github-metrics
-    name: Update this repo's README
+  Profile-Todoist:
+    name: Update Todoist Stats
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
