--- a/.github/workflows/all-actions.yml
+++ b/.github/workflows/all-actions.yml
@@ -1,5 +1,9 @@
 on:
   workflow_dispatch:
+  push:
+    branches:
+      - master
+      - main
   schedule:
     # Runs every 2 hours
     - cron: "0 */2 * * *"
