--- a/.github/workflows/all-actions.yml
+++ b/.github/workflows/all-actions.yml
@@ -16,7 +16,38 @@ jobs:
     steps:
       - uses: lowlighter/metrics@latest
         with:
-          token: ${{ secrets.METRICS_TOKEN }}  
+          token: ${{ secrets.METRICS_TOKEN }}
+          user: jimbrig
+          template: classic
+          base: header, activity, community, repositories, metadata
+          config_timezone: America/New_York
+          plugin_achievements: yes
+          plugin_achievements_limit: 20
+          plugin_achievements_secrets: yes
+          plugin_achievements_threshold: B
+          plugin_activity: yes
+          plugin_activity_days: 365
+          plugin_activity_filter: all
+          plugin_activity_limit: 10
+          plugin_activity_visibility: all
+          plugin_followup: yes
+          plugin_gists: yes
+          plugin_introduction: yes
+          plugin_introduction_title: yes
+          plugin_isocalendar: yes
+          plugin_isocalendar_duration: full-year
+          plugin_languages: yes
+          plugin_languages_colors: github
+          plugin_languages_ignored: html
+          plugin_languages_threshold: 0%
+          plugin_lines: yes
+          plugin_projects: no
+          plugin_projects_descriptions: no
+          plugin_projects_limit: 10
+          plugin_stars: yes
+          plugin_stars_limit: 20
+          repositories_forks: yes
+
           
   Profile-Stack:
       runs-on: ubuntu-latest
